# rust-ffi-practice

./: .gitignore  Cargo.toml  README.md  build.rs  wrapper.h
src/: lib.rs
