[package]
name = "practice"
version = "0.1.0"
edition = "2021"
authors = ["Nathan Henrie <nate@n8henrie.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/n8henrie/rust-ffi-practice"
homepage = "https://n8henrie.com/2021/11/the-simplest-rust-c-ffi-example/"
description = "https://n8henrie.com/2021/11/the-simplest-rust-c-ffi-example/"

[dependencies]

[build-dependencies]
bindgen = "0.59"
cc = "1"
